api/kube/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mythical-api
  namespace: benson
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mythical-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: mythical-api
    spec:
      containers:
        - name: mythical-api
          image: ${DOCKERHUB_USERNAME}/mythical_api:${IMAGE_TAG}
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: images-storage
              mountPath: /app/images
          readinessProbe:
            httpGet:
              path: /api/health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /api/health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
      volumes:
        - name: images-storage
          persistentVolumeClaim:
            claimName: mythical-img-pvc
