api/kube/db_service.yml
apiVersion: v1
kind: Service
metadata:
  name: mythical-db-svc
  namespace: benson
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: mythical-db
