api/kube/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mythical-api-service
  namespace: benson
spec:
  selector:
    app: mythical-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
